--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite---react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "./",
   "scripts": {
     "start": "npx http-server ./dist",
     "dev": "vite",
