--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
