fix: some rerender issues

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.8.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
